@@ -13,6 +13,7 @@
 https://github.com/elastic/apm-agent-python/compare/v2.0.0\...master[Check the HEAD diff]
 
  * fixed compatibility issue with aiohttp 3.0 ({pull}157[#157])
+ * Added truncation for fields that have a `maxLength` in the JSON Schema ({pull}159[#159])
 
 [[release-2.0.0]]
 [float]
